# mocap-wrapper

./: .gitignore  LICENSE  README.md  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup.py  test.py
.github/actions/if_clean/: action.yml
.github/actions/pre/: action.yml
.github/workflows/: build_push.yml  ci.yml  clean.yml  dynhamr.yml  gvhmr.yml  publish-dockerhub.yml  publish-pypi.yml  test.yml
docker/: Dockerfile  docker-compose.yaml  lib.py
docker/dynhamr/: dynhamr.dockerfile  pixi.toml
docker/gvhmr/: gvhmr.dockerfile  gvhmr.py  pixi.toml
docker/wilor/: pixi.toml  wilor.py
mocap_wrapper/: Gdown.py  app.py  install.py  lib.py  logger.py  main.py  run.py
mocap_wrapper/install/: gvhmr.py  lib.py  wilor_mini.py
mocap_wrapper/requirements/: dpvo.txt  gvhmr.txt
mocap_wrapper/run/: gvhmr.py
mocap_wrapper/script/: gvhmr.sh  install.sh
src/mocap_wrapper/: __init__.py  __main__.py  app.py  lib.py  logger.py
src/mocap_wrapper/export/: blender.py
src/mocap_wrapper/install/: Gdown.py  __init__.py  __main__.py  dpvo.py  dyn_hamr.py  dynhamr.py  gvhmr.py  gvhmr.yaml  huggingface.py  install.sh  lib.py  mamba.py  pixi.py  smpl.py  static.py  wilor.py  wilor_mini.py
src/mocap_wrapper/lib/: FFmpeg.py  __init__.py  aria.py  config.py  data_viewer.py  docker.py  logger.py  pkg_mgr.py  process.py  static.py
src/mocap_wrapper/pixi/: BMC.toml  dyn-hamr.toml  dynhamr.toml  gvhmr.toml  wilor.toml
src/mocap_wrapper/requirements/: gvhmr.txt  wilor_mini.txt
src/mocap_wrapper/run/: __init__.py  dynhamr.py  gvhmr.py  lib.py  wilor.py  wilorMini.py  wilor_mini.py
src/mocap_wrapper/script/: data_viewer.py  gvhmr.sh  mamba.py
src/mocap_wrapper/server/: __main__.py  mcp.py
tests/: bbox_yolo_viewer.js  data_viewer.ipynb  docker.sh  test_install.py  test_lib.py  test_script.py  test_wilor.py  viewer.ipynb
typings/mocap_wrapper/install/: lib.pyi
