[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=61.0", "wheel"]

[project]
authors = [
  {name = "nolca", email = "nolca@qq.com"},
]
dependencies = [
  "mcp",
  "toml",
  "tqdm",
  "numpy",
  "gdown",
  "fastapi",
  "fastmcp",
  "mirror_cn @ git+https://gitee.com/aclon314/mirror-cn.git",
  "aria2p[tui]",
  "aiohttp",
  "aexpect @ git+https://github.com/avocado-framework/aexpect.git", # TODO: don't use git when v1.7.1 released
  "platformdirs",
  "huggingface_hub",
  "typed-ffmpeg", ## mamba failed:
  "netscape-cookies",
]
description = "GVHMR, TRAM, WiLoR...mocap install/run with blender/unreal in one command"
keywords = ["mocap", "pose estimate", "blender", "unreal", "mcp"]
license = {file = "LICENSE"}
name = "mocap-wrapper"
readme = "README.md"
version = "0.2.1"

classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python",
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
] 
requires-python = ">=3.11" # 💡 you can remove the codes about `typing Unpack` to lower the python version

[tool.setuptools.package-data]
"*" = ["*.yaml", "*.yml", "*.toml", "*.tml"]

[project.optional-dependencies]
dev = ["pytest", "pytest-asyncio", "fake-bpy-module-4.3"]

[project.urls]
Download = "http://github.com/AClon314/mocap-wrapper/releases"
Homepage = "http://github.com/AClon314/mocap-wrapper"

[project.scripts]
mocap = "mocap_wrapper.app:script_entry"
