[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=61.0", "wheel"]

[project]
authors = [
  {name = "nolca", email = "nolca@qq.com"},
]
dependencies = [
  "toml",
  "tqdm",
  "numpy",
  "fastapi",
  "fastmcp",
  "mirror_cn @ git+https://github.com/aclon314/mirror-cn.git",
  "aexpect>=1.8",
  "platformdirs",
  "huggingface_hub",
  "typed-ffmpeg",
  "pydantic",
  "pydantic-argparse",
]
description = "GVHMR, TRAM, WiLoR...mocap install/run with blender/unreal in one command"
keywords = ["mocap", "pose estimate", "blender", "unreal", "mcp"]
license = {file = "LICENSE"}
name = "mocap-wrapper"
readme = "README.md"
version = "0.3.20251208"

classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python",
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
]
requires-python = ">=3.10"

[tool.setuptools.package-data]
"*" = ["*.yaml", "*.yml", "*.toml", "*.tml"]

[project.optional-dependencies]
cn = [
  "mirror_cn @ git+https://gitee.com/aclon314/mirror-cn.git",
]
dev = ["pytest", "pytest-asyncio", "fake-bpy-module-4.3"]

[project.urls]
Download = "http://github.com/AClon314/mocap-wrapper/releases"
Homepage = "http://github.com/AClon314/mocap-wrapper"

[project.scripts]
mocap = "mocap_wrapper.app:script_entry"
